App adivina el número del 1 al 100. android:hint en el EditText

--- a/app/src/main/res/layout/activity_search_number.xml
+++ b/app/src/main/res/layout/activity_search_number.xml
@@ -22,6 +22,7 @@
 
     <EditText
         android:id="@+id/numberIn"
+        android:hint="0"
         android:layout_width="59dp"
         android:layout_height="68dp"
         android:ems="10"
