--- a/app/src/main/res/layout/activity_imcactivity2.xml
+++ b/app/src/main/res/layout/activity_imcactivity2.xml
@@ -16,7 +16,7 @@
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="550dp"
         android:ems="10"
-        android:hint="Introduzca peso(kg): "
+        android:hint="@string/mensaje_peso"
         android:inputType="numberDecimal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -30,7 +30,7 @@
         android:layout_width="248dp"
         android:layout_height="61dp"
         android:ems="10"
-        android:hint="Introduzca altura(m): "
+        android:hint="@string/mensaje_altura"
         android:inputType="numberDecimal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -44,7 +44,7 @@
         android:onClick="calcularIMC"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Calcular"
+        android:text="@string/boton_calcular"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
