Clase Martes. Acabamos apartado créditos. Vovlemos a IMC Activity, ponemos toolbar y la configuramos. Limpiar y Salir. En salir usamos AlertDialog para preguntarle al usuario si quiere salir. Añado por cuenta propia un botón de miminizar.

--- a/app/src/main/res/layout/fila_participante.xml
+++ b/app/src/main/res/layout/fila_participante.xml
@@ -6,7 +6,7 @@
 
     <TextView
         android:id="@+id/nombreParticipante"
-        android:text="Pablo Sánchez"
+        android:text="Participantes"
         android:layout_width="0px"
         android:layout_height="match_parent"
         android:layout_weight="5"
