--- a/app/src/main/res/layout/activity_creditos.xml
+++ b/app/src/main/res/layout/activity_creditos.xml
@@ -13,13 +13,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Créditos"
-        android:textSize="24sp"
-        android:textStyle="bold"
+        android:textSize="30sp"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:gravity="center" />
+
+    <!-- Título. Ejemplo profesor.
+        <LinearLayout
+        android:id="@+id/cabecera"
+        android:layout_height="70dp"
+        android:layout_marginTop="32dp"
+        android:background="@color/white"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="match_parent"/>
+    -->
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
