--- a/app/src/main/res/layout/item_producto.xml
+++ b/app/src/main/res/layout/item_producto.xml
@@ -23,12 +23,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="18sp"
+            android:text="Nombre producto"
             android:textStyle="bold"/>
 
         <TextView
             android:id="@+id/priceView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text="Precio producto"
             android:textColor="@android:color/holo_green_dark"
             android:textSize="16sp" />
 
@@ -36,6 +38,7 @@
             android:id="@+id/idView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text="Id producto"
             android:textColor="@android:color/holo_green_dark"
             android:textSize="16sp" />
     </LinearLayout>
