Clase Jueves. Colocamos Slider para poder filtrar los productos. Calculamos valores máximos, mínimos y media. Los usamos para darle formato y usabilidad al Slider y actualziar la lista a mostrar en el RecyclerView.

--- a/app/src/main/res/layout/activity_productos.xml
+++ b/app/src/main/res/layout/activity_productos.xml
@@ -7,32 +7,39 @@
     android:layout_height="match_parent"
     tools:context=".productos.ProductosActivity">
 
-    <FrameLayout
+    <com.google.android.material.slider.Slider
+        android:id="@+id/sliderprecio"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:visibility="invisible" />
 
+    <FrameLayout
+        android:id="@+id/frameLayout"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="80dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewProductos"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-        </androidx.recyclerview.widget.RecyclerView>
+            android:layout_height="match_parent"
+            android:layout_marginTop="0dp" />
 
         <ProgressBar
             android:id="@+id/barraProgreso"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center">
-        </ProgressBar>
+            android:layout_gravity="center" />
 
     </FrameLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
