--- a/app/src/main/res/layout/activity_galeria_perros.xml
+++ b/app/src/main/res/layout/activity_galeria_perros.xml
@@ -10,8 +10,8 @@
     <!-- Este es el marco del carrusel de imágenes-->
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewPager2"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
         android:layout_marginBottom="80dp"
         app:layout_constraintBottom_toBottomOf="parent"
