--- a/app/src/main/res/layout/activity_perros.xml
+++ b/app/src/main/res/layout/activity_perros.xml
@@ -9,8 +9,8 @@
 
     <Spinner
         android:id="@+id/spinnerRazas"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="243dp"
+        android:layout_height="48dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,4 +26,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinnerRazas" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
