--- a/app/src/main/res/menu/menu_lateral.xml
+++ b/app/src/main/res/menu/menu_lateral.xml
@@ -72,6 +72,12 @@
                 android:orderInCategory="9"
                 android:title="Tabs">
             </item>
+            <item
+                app:showAsAction="always"
+                android:icon="@drawable/rounded_arrow_forward_24"
+                android:orderInCategory="10"
+                android:title="Notificacion">
+            </item>
         </menu>
     </item>
 </menu>
