--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="griscabecera">#99504D4E</color>
-
+    <color name="griscabecera">#9F9C9C</color>
+    <color name="amarilloaction">#FFEB3B</color>
+    <color name="fucsia">#E91E63</color>
 </resources>
