--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,7 @@
     <color name="griscabecera">#9F9C9C</color>
     <color name="amarilloaction">#FFEB3B</color>
     <color name="fucsia">#E91E63</color>
+    <color name="verde">#6AAE1C</color>
+    <color name="rojo">#E40551</color>
+    <color name="azul">#03A0F4</color>
 </resources>
