--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/framemap"
@@ -17,15 +16,16 @@
         tools:context=".mapa.MapsActivity" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:src="@drawable/sharp_adjust_24"
-        android:backgroundTint="@color/white"
-        android:elevation="6dp"
-        android:scaleType="fitCenter"
-        android:onClick="mostrarUbicacionMapa"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="30dp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="20dp"
+        android:backgroundTint="@color/white"
+        android:elevation="10dp"
+        android:onClick="mostrarUbicacionMapa"
+        android:scaleType="fitCenter"
+        android:src="@drawable/sharp_adjust_24">
+
     </com.google.android.material.floatingactionbutton.FloatingActionButton>
 
 </FrameLayout>
