Cambios propios. Creación de un RecyclerView para mostrar los datos recuperardos de Firabase, creando una nueva activity al pulsar el botón de listar clientes. Creamos Adapter, holder, item_layout.

--- a/app/src/main/res/layout/activity_insertar_clientes.xml
+++ b/app/src/main/res/layout/activity_insertar_clientes.xml
@@ -83,7 +83,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
-        android:text="LISTAR CLIENTES(en el log)"
+        android:text="LISTAR CLIENTES"
         android:onClick="listarClientes"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
