Cambios propio. se ha añadido la funcionalidad para borrar datos de Firabase desde el propio listado del recycler. He controlado cuando se muestra la lista si la base está vacía y salir del recycler una vez se borre el último elemento. Mucho en como notificamos las posiciones de los elementos de firabase, debemos notificarlo bien y a tiempo para que sea capaz de borrar de esta forma dinámica.

--- a/app/src/main/res/layout/item_cliente.xml
+++ b/app/src/main/res/layout/item_cliente.xml
@@ -1,45 +1,60 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:padding="16dp">
 
-    <TextView
-        android:id="@+id/nombreRecuperado"
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="vertical">
+
+        <!-- Detalles del cliente -->
+        <TextView
+            android:id="@+id/nombreRecuperado"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Nombre" />
+
+        <TextView
+            android:id="@+id/edadRecuperada"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Edad" />
+
+        <TextView
+            android:id="@+id/localidadRecuperada"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Localidad" />
+
+        <TextView
+            android:id="@+id/nacionalidadRecuperada"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Nacionalidad" />
+
+        <TextView
+            android:id="@+id/emailRecuperado"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Email" />
+
+        <TextView
+            android:id="@+id/claveRecuperada"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Clave" />
+    </LinearLayout>
+
+    <!-- Botón de borrar -->
+    <Button
+        android:id="@+id/btnBorrarCliente"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Nombre" />
-
-    <TextView
-        android:id="@+id/edadRecuperada"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Edad" />
-
-    <TextView
-        android:id="@+id/localidadRecuperada"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Localidad" />
-
-    <TextView
-        android:id="@+id/nacionalidadRecuperada"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Nacionalidad" />
-
-    <TextView
-        android:id="@+id/emailRecuperado"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Email" />
-
-    <TextView
-        android:id="@+id/claveRecuperada"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Clave" />
-
-
+        android:layout_marginStart="10dp"
+        android:onClick="borrarCliente"
+        android:layout_gravity="center"
+        android:text="Borrar" />
 </LinearLayout>
