--- a/app/src/main/res/menu/menu_lateral.xml
+++ b/app/src/main/res/menu/menu_lateral.xml
@@ -88,7 +88,7 @@
                 app:showAsAction="always"
                 android:icon="@drawable/rounded_arrow_forward_24"
                 android:orderInCategory="12"
-                android:title="Insertar cliente Firebase">
+                android:title="Cliente BBDD Firebase">
             </item>
         </menu>
     </item>
