--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="verde">#6AAE1C</color>
     <color name="rojo">#E40551</color>
     <color name="azul">#03A0F4</color>
+    <color name="azulmarino">#0574AF</color>
+
 </resources>
