--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,22 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.CntgApp" parent="Theme.Material3.DayNight">
+    <!-- <style name="Base.Theme.CntgApp" parent="Theme.Material3.DayNight"> Este es el que venía por defecto. -->
+    <style name="Base.Theme.CntgApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    <!-- VAMOS A REDEFINIR COLORES PRINCIPALES -->
+        <item name="colorPrimary">#32AF37</item>
+        <item name="colorSecondary">@color/azulmarino</item>
+
+    </style>
+
+    <style name="Base.Theme.CntgApp.SinBarra" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <!-- Customize your light theme here. -->
+        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <!-- VAMOS A REDEFINIR COLORES PRINCIPALES -->
+        <item name="colorPrimary">@color/fucsia</item>
+        <item name="colorSecondary">@color/azulmarino</item>
+
     </style>
 
     <style name="Theme.CntgApp" parent="Base.Theme.CntgApp" />
